# dummy_gst_plugin

./: CMakeLists.txt  dummy_plugin.c  dummy_plugin.h
